--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+**/__pycache__
 *.py[cod]
 *$py.class
 *db.sqlite3
+*Idea
 
 # C extensions
 *.so
